src/scss/_global.scss
/**
 * Global
 */


/**
 * Theme changes
 */

.navbar-default {
	border-color: transparent;
}

.navbar-default .navbar-header .navbar-brand,
.navbar-default .navbar-header .navbar-brand:focus,
.navbar-default .navbar-header .navbar-brand:hover {
	color: $color-2;
}

.navbar-default .nav>li>a:focus:hover,
.navbar-default .nav>li>a:hover {
	color: $color-2;
}

.navbar-default.affix .navbar-header .navbar-brand {
	color: $color-2;
}

.navbar-default .nav>li.active>a,
.navbar-default .nav>li.active>a:focus {
	color: $color-3 !important;
}

body,
.btn,
.navbar-default,
.navbar-default .navbar-header .navbar-brand,
h1,
h2,
h3,
h4,
h5,
h6 {
	font-family: 'Ubuntu', sans-serif;
}

a {
	color: $color-2;

	&:focus {
		color: $color-3;
	}

	&:hover {
		color: $color-3;
	}
}

.btn {
	border-radius: 8px;
}

hr {
	border-color: $color-1;
}

.bg-primary {
	background-color: $color-1;
}

.btn-primary {
	background-color: $color-2;
}

.btn-primary.active,
.btn-primary.focus,
.btn-primary:active,
.btn-primary:focus,
.btn-primary:hover,
.open>.dropdown-toggle.btn-primary {
	background-color: $color-3;
	border-color: $color-3;
}

.portfolio-box .portfolio-box-caption {
	background: rgba(24, 64, 112, 0.9);
}

header {
	background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../img/header.jpg');
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-position: center center;
}

#about {
	background: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/code-3.png');
	background-repeat: no-repeat;
	background-size: 150%;
	background-position: center center;

	.section-heading {
		color: $color-3;
	}

	a {
		margin-top: 1em;
	}
}

#contact {
	color: $color-0;
	a {
		color: $color-5;
		margin-right: 1em;
		text-decoration: none;
		&:focus {
			color: $color-0;
		}
		&:hover {
			color: $color-0;
		}
	}
}

@media (min-width: 768px) {
	.navbar-default .navbar-header .navbar-brand {
		color: hsla(0, 0%, 100%, .7);
	}
	.navbar-default .navbar-header .navbar-brand:focus,
	.navbar-default .navbar-header .navbar-brand:hover {
		color: $color-0;
	}
	.navbar-default.affix .nav>li>a:focus:hover,
	.navbar-default.affix .nav>li>a:hover {
		color: $color-2;
	}
	.navbar-default.affix .navbar-header .navbar-brand:focus,
	.navbar-default.affix .navbar-header .navbar-brand:hover {
		color: $color-3;
	}
	.navbar-default.affix .nav>li>a:focus:hover,
	.navbar-default.affix .nav>li>a:hover {
		color: $color-3;
	}
	.navbar-default.affix .nav>li>a,
	.navbar-default.affix .nav>li>a:focus {
		color: $color-1;
	}
	.navbar-default .nav>li>a:focus:hover,
	.navbar-default .nav>li>a:hover {
		color: $color-3;
	}
}

